--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="zjfContainer">
 <header>
-	<h1>WEB前端开发工程师求职</h1>
+	<h1>WEB前端开发工程师</h1>
 	<figure>
 		<img src="img/My_picture.jpg">
 	</figure>
