--- a/Myresume.html
+++ b/Myresume.html
@@ -25,12 +25,16 @@
 		</h2>
 	</div>
 	<ul>
-		<li><span>姓名：</span>郑庆</li>
+		<li><span>姓名：</span>郑吉芳</li>
+		<li><span>性别：</span>男</li>
+		<li><span>年龄：</span>20</li>
 		<li><span>Phone：</span>137-1614-0441</li>
-		<li><span>年龄：</span>21</li>
-		<li><span>Email：</span>2710846450@qq.com</li>
 		<li><span>学历：</span>大专</li>
-		<li><span>工作经验：</span>三年</li>
+		<li><span>Email：</span>2710846450@qq.com</li>
+		<li><span>工作经验：</span>两年半</li>
+		<li><span>期望薪资：</span>12000-15000</li>
+		<li><span>现居地：</span>北京</li>
+		<li><span>籍贯：</span>河南省南阳市</li>
 	</ul>
 </div>
 
@@ -53,7 +57,7 @@
  				</div>
 			</div>
 		</span>
-		<span>精通</span>
+		<span>熟练</span>
 	 </div>
 	 <div class="My_skills_one">
 		<span>原生js</span>
@@ -64,7 +68,7 @@
  				</div>
 			</div>
 		</span>
-		<span>精通</span>
+		<span>熟练</span>
 	 </div>
 	 <div class="My_skills_one">
 		<span>jQuery</span>
@@ -75,7 +79,7 @@
  				</div>
 			</div>
 		</span>
-		<span>精通</span>
+		<span>熟练</span>
 	 </div>
 	 <div class="My_skills_one">
 		<span>angularJS</span>
@@ -100,15 +104,37 @@
 		<span>掌握</span>
 	 </div>
 	 <div class="My_skills_one">
-		<span>nodeJS</span>
+		<span>VueJS</span>
 		<span>
 			<div class="progress">
- 				 <div class="progress-bar progress-bar-success progress-bar-striped progressBar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+ 				 <div class="progress-bar progress-bar-success progress-bar-striped progressBar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
     			<span class="sr-only">40% Complete (success)</span>
  				</div>
 			</div>
 		</span>
-		<span>掌握</span>
+		<span>熟悉</span>
+	 </div>
+	 <div class="My_skills_one">
+		<span>ReactJS</span>
+		<span>
+			<div class="progress">
+ 				 <div class="progress-bar progress-bar-success progress-bar-striped progressBar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
+    			<span class="sr-only">40% Complete (success)</span>
+ 				</div>
+			</div>
+		</span>
+		<span>熟悉</span>
+	 </div>
+	 <div class="My_skills_one">
+		<span>nodeJS</span>
+		<span>
+			<div class="progress">
+ 				 <div class="progress-bar progress-bar-success progress-bar-striped progressBar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
+    			<span class="sr-only">40% Complete (success)</span>
+ 				</div>
+			</div>
+		</span>
+		<span>熟悉</span>
 	 </div>
 	 <div class="My_skills_one">
 		<span>php</span>
@@ -121,7 +147,7 @@
 		</span>
 		<span>熟悉</span>
 	 </div>
-	 <p>有扎实的前端理论基础，对流行趋势有敏锐的洞察能力。<br>熟悉使用公司内的一些版本管理工具、团队协作工具()、构建工具，如github、bower、grunt等</p>
+	 <p>有扎实的前端理论基础，对流行趋势有敏锐的洞察能力。<br>熟悉使用公司内的一些版本管理工具(github)、团队协作工具(svn)、构建工具(webpack、bower、yoemen)，打包工具(grunt)。</p>
 	</div>
 	</div>
 	
@@ -136,53 +162,39 @@
 		</div>
 
 		<div class="myExperience">
-			<p>2014年开始实习，开启了web前端历程</p>
+			<p>2014年07月开始实习，开启了web前端历程</p>
 			<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
  		  <!-- Indicators -->
-  			<ol class="carousel-indicators">
+  			<ol class="carousel-indicators" style="bottom:-6px;">
    	  		<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
     			<li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    			<li data-target="#carousel-example-generic" data-slide-to="2"></li>
   			</ol>
 
  		  	<!-- Wrapper for slides -->
   			<div class="carousel-inner zjf_lunbo" role="listbox">
   		  	<div class="item active">
       			<div>
-      				<p>掌尚科技</p>
-      				<p>2014年3月-2015年3月</p>
+      				<p>郑州市创新电子科技有限公司</p>
+      				<p>2014年07月-2015年12月</p>
       				<ul>
       					<li>前端技术部</li>
       					<li>负责部分PC端和移动端页面的HTML/CSS/JS代码编写</li>
-      					<li>熟悉Jquery,bootstrap来编写网页效果。</li>
-      					<li>手机APP与网页HTML5页面的互动开发、优化。</li>
-      					<li>用less编译css,能用原生js写效果。</li>
+      					<li>熟悉Jquery,原生js来编写网页效果。</li>
+      					<li>特殊 JS、JQuery、CSS3 等特效的实现，利用 ajax 实现 json 数据的调取。</li>
+      					<li>设计、产品、后台人员保持良好沟通，能快速理解掌握各方需求，完成开发工作。</li>
       				</ul>
       			</div>
     			</div>
     			<div class="item">
     				<div>
-      				<p>灵秀网络科技</p>
-      				<p>2015年3月-2016年3月</p>
+      				<p>北京暖岛网络信息科技有限公司</p>
+      				<p>2016年02月-2017年02月</p>
       				<ul>
       					<li>前端技术部</li>
       					<li>负责将UI设计稿制作成符合标准的HTML/HTML5的HTML代码</li>
       					<li>与UI设计、产品、后台人员保持良好沟通，能快速理解掌握各方需求，完成开发工作</li>
       					<li>提升产品的用户体验，前端性能</li>
-      					<li>掌握github、svn、grunt、bower等公司管理工具</li>
-      				</ul>
-      			</div>
-    			</div>
-    			<div class="item">
-      			<div>
-      				<p>掌上维度</p>
-      				<p>2016年3月-现在</p>
-      				<ul>
-      					<li>前端技术部</li>
-      					<li>对W3C标准有较深刻的理解，能书写兼容个浏览器的页面代码。</li>
-      					<li>能以面向对象的思想进行JavaScript编程，会使用主流JS框架，JQuery、angular等</li>
-      					<li>熟悉后台语言(如PHP、node.js)</li>
-      					<li>负责Web前端表现层与后端服务交互的设计与开发</li>
+      					<li>能快速学习公司需要的工具及框架。</li>
       				</ul>
       			</div>
     			</div>
@@ -226,8 +238,16 @@
 		</div>
 		<div class="project_one">
 			<h2>河南黑白熊公司PC端页面<a href="http://www.heibaix.com/">http://www.heibaix.com/</a></h2>
-			<p>项目描述：为该企业做一套PC端页面。</p>
-			<p>项目职责：依据设计完成基本的 web 前端页面的排版和特效的添加，主要运用 JS，jQuery等。</p>
+			<h2>美食杰<a href="http://www.meishij.net/">http://www.meishij.net/</a></h2>
+			<h2>河南三石电子商城<a href="http://www.3sdz.com/">http://www.3sdz.com/</a></h2>
+			<h2>问卷调查系统(移动端)<a href="http://surveytime.cn/1602/survey">http://surveytime.cn/1602/survey</a></h2>
+			<h2>客户管理系统<a href="#"></a></h2>
+			<h2>项目职责：</h2>
+			<p>1、根据工作安排高效，高质地完成代码编写，确保符合规范的前端代码规范。</p>
+			<p>2、特殊 JS、JQuery、CSS3 等特效的实现，利用 ajax 实现 json 数据的调取。</p>
+			<p>3、根据产品需求，和大家一起分析并给出最优的页面前端结构解决方案。</p>
+			<p>4、设计、产品、后台人员保持良好沟通，能快速理解掌握各方需求，完成开发工作。</p>
+			<p>5、提升产品的用户体验，前端性能。</p>
 		</div>
 	</div>
 	
