--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
 	<title>我的简历</title>
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" type="text/css">
 	<link rel="stylesheet" href="css/index.css" type="text/css">
+	<script>
+		var _hmt = _hmt || [];
+		(function() {
+		  var hm = document.createElement("script");
+		  hm.src = "https://hm.baidu.com/hm.js?54b8b818b1ae68c5143ac61525e777c1";
+		  var s = document.getElementsByTagName("script")[0]; 
+		  s.parentNode.insertBefore(hm, s);
+		})();
+	</script>
+
 </head>
 <body>
 <div class="zjfContainer">
