--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 		</span>
 		<span>熟悉</span>
 	 </div>
-	 <p>有扎实的前端理论基础，对流行趋势有敏锐的洞察能力。<br>熟悉使用公司内的一些版本管理工具(github)、团队协作工具(svn)、构建工具(webpack、bower、yoemen)，打包工具(grunt)。</p>
+	 <p>有扎实的前端理论基础，对流行趋势有敏锐的洞察能力。<br>熟悉公司内的一些版本管理工具(github)、团队协作工具(svn)、构建工具(webpack、yoemen)、打包工具(grunt、gulp)。</p>
 	</div>
 	</div>
 	
@@ -189,9 +189,9 @@
       				<ul>
       					<li>前端技术部</li>
       					<li>负责部分PC端和移动端页面的HTML/CSS/JS代码编写</li>
-      					<li>熟悉Jquery,原生js来编写网页效果。</li>
-      					<li>特殊 JS、JQuery、CSS3 等特效的实现，利用 ajax 实现 json 数据的调取。</li>
-      					<li>设计、产品、后台人员保持良好沟通，能快速理解掌握各方需求，完成开发工作。</li>
+      					<li>熟练使用Jquery、原生JS来编写网页效果。</li>
+      					<li>特殊 JS、JQuery、CSS3 等特效的实现，利用 ajax 实现 json 数据的调取，完成前后台交互。</li>
+      					<li>与设计、产品、后台人员保持良好沟通，能快速理解掌握各方需求，完成开发工作。</li>
       				</ul>
       			</div>
     			</div>
@@ -234,8 +234,7 @@
 				关于我<br/>About me
 			</h2>
 		</div>
-		<p>性格耐心细致，责任心强，创造能力强，善于学习并总结，积极主动完成本职工作，竭尽全力把工作做到更好，积极面对问题，能与团队融为一体，已积累一定数量项目开发经验。平时喜欢打篮球、看书、爬山、学习新技能。我的座右铭是：自己选的路，不管再难，就是爬也要爬过去！</p>
-	</div>
+		<p>性格耐心细致，责任心强，创造能力强，善于学习并总结，积极主动完成本职工作，竭尽全力把工作做到最好，积极面对问题，能与团队融为一体，已积累一定数量项目开发经验。平时喜欢打篮球、看书、爬山、学习新知识。我的座右铭是：每天都要比昨天进步一点！</div>
 	
 	<div class="project">
 		<div class="title">
@@ -256,13 +255,13 @@
 			<p>1、根据工作安排高效，高质地完成代码编写，确保符合规范的前端代码规范。</p>
 			<p>2、特殊 JS、JQuery、CSS3 等特效的实现，利用 ajax 实现 json 数据的调取。</p>
 			<p>3、根据产品需求，和大家一起分析并给出最优的页面前端结构解决方案。</p>
-			<p>4、设计、产品、后台人员保持良好沟通，能快速理解掌握各方需求，完成开发工作。</p>
+			<p>4、与设计、产品、后台人员保持良好沟通，能快速理解掌握各方需求，完成开发工作。</p>
 			<p>5、提升产品的用户体验，前端性能。</p>
 		</div>
 	</div>
 	
 	<footer>
-		<p>Thank You For Watch!</p>
+		<p>Thank You For Watching!</p>
 		<p>Phone：137-1614-0441</p>
 		<p>Email：2710846450@qq.com</p>
 		<div class="erweima">
