--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	</div>
 	<div class="My_skills">
 	 <div class="My_skills_one">
-		<span>html5/css3</span>
+		<span>HTML5/CSS3</span>
 		<span>
 			<div class="progress">
  				 <div class="progress-bar progress-bar-success progress-bar-striped progressBar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
@@ -70,7 +70,7 @@
 		<span>熟练</span>
 	 </div>
 	 <div class="My_skills_one">
-		<span>原生js</span>
+		<span>原生JS</span>
 		<span>
 			<div class="progress">
  				 <div class="progress-bar progress-bar-success progress-bar-striped progressBar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
@@ -147,7 +147,7 @@
 		<span>熟悉</span>
 	 </div>
 	 <div class="My_skills_one">
-		<span>php</span>
+		<span>PHP</span>
 		<span>
 			<div class="progress">
  				 <div class="progress-bar progress-bar-success progress-bar-striped progressBar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
@@ -172,7 +172,7 @@
 		</div>
 
 		<div class="myExperience">
-			<p>2014年07月开始实习，开启了web前端历程</p>
+			<p>2014年07月开始实习，开启了Web前端历程</p>
 			<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
  		  <!-- Indicators -->
   			<ol class="carousel-indicators" style="bottom:-6px;">
