--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<li><span>Phone：</span>137-1614-0441</li>
 		<li><span>学历：</span>大专</li>
 		<li><span>Email：</span>2710846450@qq.com</li>
-		<li><span>工作经验：</span>两年半</li>
+		<li><span>工作经验：</span>三年</li>
 		<li><span>期望薪资：</span>13000-15000</li>
 		<li><span>现居地：</span>北京</li>
 		<li><span>籍贯：</span>河南省南阳市</li>
@@ -104,6 +104,17 @@
 	 </div>
 	 <div class="My_skills_one">
 		<span>bootstrap</span>
+		<span>
+			<div class="progress">
+ 				 <div class="progress-bar progress-bar-success progress-bar-striped progressBar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+    			<span class="sr-only">40% Complete (success)</span>
+ 				</div>
+			</div>
+		</span>
+		<span>掌握</span>
+	 </div>
+	 <div class="My_skills_one">
+		<span>Swiper/Zepto</span>
 		<span>
 			<div class="progress">
  				 <div class="progress-bar progress-bar-success progress-bar-striped progressBar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
