--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
       				<ul>
       					<li>前端技术部</li>
       					<li>负责部分PC端和移动端页面的HTML/CSS/JS代码编写</li>
-      					<li>熟练使用Jquery、原生JS来编写网页效果。</li>
-      					<li>特殊 JS、JQuery、CSS3 等特效的实现，利用 ajax 实现 json 数据的调取，完成前后台交互。</li>
-      					<li>与设计、产品、后台人员保持良好沟通，能快速理解掌握各方需求，完成开发工作。</li>
+      					<li>熟练使用Jquery、原生JS来编写网页效果，与后台人员保持良好沟通，理解各方需求，完成开发工作。</li>
+      					<li>熟悉angular.js、swiper框架、PHP后台，使用版本管理工具Git、打包工具grunt。</li>
+      					<li>对页面进行优化，提高用户体验，提升前端性能。</li>
       				</ul>
       			</div>
     			</div>
@@ -212,10 +212,10 @@
       				<p>2016年02月-2017年02月</p>
       				<ul>
       					<li>前端技术部</li>
-      					<li>负责将UI设计稿制作成符合标准的HTML/HTML5的HTML代码</li>
-      					<li>与UI设计、产品、后台人员保持良好沟通，能快速理解掌握各方需求，完成开发工作</li>
-      					<li>提升产品的用户体验，前端性能</li>
-      					<li>能快速学习公司需要的工具及框架。</li>
+      					<li>静态页面编写，动态效果的编写，掌握Bootstrap、less。</li>
+      					<li>与后台人员保持良好沟通，能快速理解各方需求，完成开发工作，提升产品的用户体验，前端性能。</li>
+      					<li>掌握jquery、angular、swiper、zepto框架，熟悉React.js、Vue.js、Charts.js。</li>
+      					<li>熟悉Webpack、Yeoman构建工具、PHP后台、Node.js，可以使用Git、SVN、Grunt、Gulp等工具。</li>
       				</ul>
       			</div>
     			</div>
