--- a/index.html
+++ b/index.html
@@ -259,15 +259,17 @@
 		<div class="project_one">
 			<h2>河南黑白熊公司PC端页面<a href="http://www.heibaix.com/">http://www.heibaix.com/</a></h2>
 			<h2>美食杰<a href="http://www.meishij.net/">http://www.meishij.net/</a></h2>
-			<h2>河南三石电子商城<a href="http://www.3sdz.com/">http://www.3sdz.com/</a></h2>
 			<h2>问卷调查系统(移动端)<a href="http://surveytime.cn/1602/survey">http://surveytime.cn/1602/survey</a></h2>
 			<h2>客户管理系统<a href="#"></a></h2>
 			<h2>项目职责：</h2>
 			<p>1、根据工作安排高效，高质地完成代码编写，确保符合规范的前端代码规范。</p>
-			<p>2、特殊 JS、JQuery、CSS3 等特效的实现，利用 ajax 实现 json 数据的调取。</p>
+			<p>2、使用angular.js框架进行编写页面。</p>
+			<p>2、用原生JS、JQuery、CSS3实现页面的动态效果，利用 ajax 实现 json 数据的调取。</p>
 			<p>3、根据产品需求，和大家一起分析并给出最优的页面前端结构解决方案。</p>
-			<p>4、与设计、产品、后台人员保持良好沟通，能快速理解掌握各方需求，完成开发工作。</p>
-			<p>5、提升产品的用户体验，前端性能。</p>
+			<p>4、使用Git时时上传项目，不断更新项目。</p>
+			<p>5、与设计、产品、后台人员保持良好沟通，能快速理解掌握各方需求，完成开发工作。</p>
+			<p>6、提升产品的用户体验，前端性能。</p>
+			<p>7、使用grunt、gulp打包工具对文件进行打包。</p>
 		</div>
 	</div>
 	
