--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 			<h2>河南黑白熊公司PC端页面<a href="http://www.heibaix.com/">http://www.heibaix.com/</a></h2>
 			<h2>美食杰<a href="http://www.meishij.net/">http://www.meishij.net/</a></h2>
 			<h2>问卷调查系统(移动端)<a href="http://surveytime.cn/1602/survey">http://surveytime.cn/1602/survey</a></h2>
-			<h2>客户管理系统<a href="#"></a></h2>
+			<h2>客户管理系统<a href="#">http://121.42.136.169:8005/projectone</a></h2>
 			<h2>项目职责：</h2>
 			<p>1、根据工作安排高效，高质地完成代码编写，确保符合规范的前端代码规范。</p>
 			<p>2、使用angular.js框架进行编写页面。</p>
