--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title></title>
 </head>
 <body>
+	<input type="number" placeholder="number键盘" />	
+	<input type="tel" placeholder="tel键盘" />
 	<script>
 	if (navigator.geolocation) {
 		navigator.geolocation.getCurrentPosition(function(posi){
