--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="zhengjifang">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
 	<title></title>
 </head>
 <body>
